--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       letter-spacing: 0;
       line-height: 1.1;
       border: .1em solid black;
+      border-radius: 7px;
       padding: 0.5em;
       box-shadow: 2px 2px 12px 1px rgba(0, 0, 0, 0.7);
     }
