--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     body {
       display: flex;
       height: 100%;
+      margin: 0;
     }
 
     h1 {
-      font-size: 5rem;
+      font-size: calc(2rem + 5vw);
       font-weight: 600;
       margin: auto;
       letter-spacing: 0;
@@ -34,7 +35,7 @@
     }
 
     h1 > strong {
-      font-size: 7rem;
+      font-size: 1.3em;
       font-weight: 900;
       text-transform: uppercase;
       text-decoration: underline;
